tests/neg/i26416.check
-- [E007] Type Mismatch Error: tests/neg/i26416.scala:10:43 ------------------------------------------------------------
10 |    val supersecret: Secret^{this} = Secret("Blahblah") // error // error
   |                                     ^^^^^^^^^^^^^^^^^^
   |Found:    test1.Secret^{any}
   |Required: test1.Secret^{SecretService.this}
   |
   |Note that capability `any` cannot flow into capture set {SecretService.this}.
   |
   |where:    any is a root capability classified as SharedCapability created in value supersecret when constructing instance test1.Secret
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg/i26416.scala:7:2 --------------------------------------------------------------
7 |  var commonsecret: Secret^ = new Secret("Goldfinger") // error // error
  |  ^
  |Found:    object test1.i26416$package^{any}
  |Required: object test1.i26416$package^'s1
  |
  |Note that capability `any` cannot flow into capture set {}.
  |
  |The error occurred for a synthesized tree:  new test1.i26416$package()
  |
  |where:    any is a root capability classified as SharedCapability created in package test1 with contributing field val commonsecret
  |
  | longer explanation available when compiling with `-explain`
-- Error: tests/neg/i26416.scala:7:6 -----------------------------------------------------------------------------------
7 |  var commonsecret: Secret^ = new Secret("Goldfinger") // error // error
  |      ^
  |      a field `commonsecret` with `any` in its type need to be put in an object that extends Capability
-- [E007] Type Mismatch Error: tests/neg/i26416.scala:61:43 ------------------------------------------------------------
61 |    val supersecret: Secret^{this} = Secret("Blahblah") // error
   |                                     ^^^^^^^^^^^^^^^^^^
   |Found:    test5.Secret^{any}
   |Required: test5.Secret^{SecretService.this}
   |
   |Note that capability `any` cannot flow into capture set {SecretService.this}.
   |
   |where:    any is a root capability classified as SharedCapability created in value supersecret when constructing instance test5.Secret
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg/i26416.scala:76:21 ------------------------------------------------------------
76 |      commonsecret = supersecret // error
   |                     ^^^^^^^^^^^
   |Found:    (SecretService.this.supersecret : test6.Secret^{SecretService.this})
   |Required: test6.Secret^{any}
   |
   |Note that capability `SecretService.this.supersecret` cannot flow into capture set {any}
   |because (SecretService.this.supersecret : test6.Secret^{SecretService.this}) in class SecretService is not visible from any in variable commonsecret.
   |
   |where:    any is a root capability in the type of variable commonsecret
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg/i26416.scala:91:21 ------------------------------------------------------------
91 |      commonsecret = supersecret // error
   |                     ^^^^^^^^^^^
   |Found:    (SecretService.this.supersecret : test7.Secret^{SecretService.this})
   |Required: test7.Secret^{any}
   |
   |Note that capability `SecretService.this.supersecret` cannot flow into capture set {any}
   |because (SecretService.this.supersecret : test7.Secret^{SecretService.this}) in class SecretService is not visible from any in variable commonsecret.
   |
   |where:    any is a root capability in the type of variable commonsecret
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg/i26416.scala:10:21 ---------------------------------------------------------------------------------
10 |    val supersecret: Secret^{this} = Secret("Blahblah") // error // error
   |                     ^^^^^^^^^^^^^
   |                 (SecretService.this : test1.SecretService^'s2) cannot be tracked since its capture set is empty
-- Error: tests/neg/i26416.scala:35:21 ---------------------------------------------------------------------------------
35 |    val supersecret: Secret^{this} = Secret("Blahblah") // error
   |                     ^^^^^^^^^^^^^
   |                     (SecretService.this : SecretService^'s3) cannot be tracked since its capture set is empty
